Add 2.0.13 items on behalf of Nokubi San

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,13 @@
-Overview of Changes in Namazu 2.x.x - XXXX, 200x
+Overview of Changes in Namazu 2.0.13 - XXXX Y, 2003
 
 * Add Polish translations.
   (Contributed by Kryzystof Drewicz.)
+* Add new filters (Ichitaro variants, OpenOffice.org)
+* Adapt new filter programs (wvWare 0.7.4, xpdf 2.02)
+* Add new directives for namazurc (SUICIDE_TIME, REGEX_SEARCH)
+  (to prevent possibility of remote DoS, reported by sheepman.)
+* Change LTVERSION (lib/libnmz.so.6 -> lib/libnmz.so.7)
+* Fix some bugs and possibility of security hole.
 
 Overview of Changes in Namazu 2.0.12 - September 3, 2002
 
