--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -1,3 +1,106 @@
+2003-07-31  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Version 1.20.
+
+	* MMagic.pm (addMagicEntry): Added a capability of adding sub entry.
+
+2003-05-08  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Version 1.19.
+
+	* MMagic.pm (new): Changed the scope of $dataLoc variable.
+	  I think it should be fix the following problem.
+	  https://rt.cpan.org/Ticket/Display.html?id=2499
+	  If the problem is still there, mail me please.
+	  (Reported and patch contributed by Mark Stosberg, thank you)
+
+	* MMagic.pm (__DATA__): Added EPS entry.
+	  (Contributed by Jason Maggard, thank you)
+
+2003-03-26  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Version 1.18.
+
+	* MMagic.pm (new): Fixed special entry for x-roff.
+	(Reported by Okayasu, thank you)
+
+2003-03-03  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Version 1.17.
+
+	* MMagic.pm (__DATA__): Removed unnecessary tab in audio/x-wav.
+	(Reported by Knut Haugen, thank you)
+
+2002-09-12  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+        * Version 1.16.
+        
+        * MMagic.pm (new): Fixed binmode() place.
+        (contributed by Everton da Silva Marques, thank you.)
+
+2002-03-14  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm (new): Added a signature for text/x-roff type.
+
+2002-02-22  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Version 1.15.
+
+	* MMagic.pm: Added new funtions removeSpecials and
+	removeExts.
+	(Patch contributed by Hilko Bengen, thank you.)
+
+2001-11-13  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm: Added binmode() in some file handles.
+	(Reported by Antony O'Sullivan, thanks.)
+
+2001-08-08  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* README.en : Added the notice section.
+
+	* README.ja : Ditto.
+
+2001-07-17  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MANIFEST: Added t/02-extmagic.t for distribution.
+
+	* t/02-extmagic.t: Added a new file for testing.
+
+	* MANIFEST: Added t/01-selfcheck.t for distribution.
+
+	* t/01-selfcheck.t: Added a new file for testing.
+
+2001-07-05  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm (checktype_filename): Added workaround for MSWin32
+	symlink handling probrem on ActivePerl build 626.
+	(Reported by Thomas Yengst, thank you.)
+
+	* perl-File-MMagic.spec: Removed.
+
+2001-06-20  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm: Added some archives entry (arc, zoo, arj, rar).
+
+2001-06-19  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm: Added ms-tnef entry.
+
+	* Version 1.14.
+
+2001-06-18  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm: Added more comment on pod.
+
+2001-06-15  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm (readMagicEntry): Fixed warning output probrem
+	on large magic database.
+	(Reported and patched by John R Lenton. Thanks.)
+
+	* Version 1.13.
+
 2001-02-09  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* MMagic.pm (checktype_data): Changed evaluation sequence of
