--- a/File-MMagic/README.en
+++ b/File-MMagic/README.en
@@ -1,6 +1,6 @@
 File::MMagic
 
-Copyright(C) 1999 NOKUBI Takatsugu <knok@daionet.gr.jp>
+Copyright(C) 1999-2001 NOKUBI Takatsugu <knok@daionet.gr.jp>
 
 1. Abstract
 
@@ -22,3 +22,15 @@ See "perldoc File::MMagic".
 4. Copyright
 
 See COPYING file.
+
+5. Notice
+
+If you want to use the module under mod_perl environment, you'll need
+to divide the module into module part and magic entry file part, and use
+the magic file explicitly.
+Built-in magic entry does not work correctly under mod_perl.
+
+Ex.
+
+my $magic = File::MMagic::new('/etc/mime-magic');
+   # /etc/mime-magic is separated file from MMagic.pm
