--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-01  Tadamasa Teranishi  <yw3t-trns@asahi-net.or.jp>
+
+	* ja.po: Update messages.
+
 2000-05-24  Masao Takaku  <masao@ulis.ac.jp>
 
 	* ja.po: Update messages.
