--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -1,3 +1,24 @@
+2004-03-15  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm: Version 1.22.
+	  Changed to treat string/[BCc] as same as string.
+
+	* Added the 4th test.
+
+2003-11-21  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Version 1.21.
+
+	* Fixed some tests (bad usage of new method).
+
+	* Added the third test.
+	  Contributed by Simon Matthews, thank you!
+
+2003-11-20  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm (new): Fixed mod_perl issue.
+	  Contributed by Simon Matthews, thank you!
+
 2003-07-31  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* Version 1.20.
