--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -1,3 +1,24 @@
+2005-08-01  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Version 1.24.
+
+	* MMagic.pm (check_binary): Removed brackets, closes #13535.
+	  (Reported by dakkar, thank you)
+
+2005-07-29  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm: Version 1.23.
+
+2004-04-21  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm (magicMatchStr): Added a length check.
+	  Reported by Tadamasa Teranishi, thank you.
+
+2004-03-17  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Build.PL: Added.
+	  Contributed by Ryuji Abe, thank you.
+
 2004-03-15  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* MMagic.pm: Version 1.22.
