* filter/mailnews.pl: It corresponds to the one that the value of boundary is not enclosed with a double quotation. * po/*.po, po/namazu.pot: Update messages. * namazu.spec.in: Update.

--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -211,7 +211,7 @@ msgid "Replace: %-20s\t%s\n"
 msgstr "置換 (Replace): %-20s\t%s\n"
 
 #: src/usage.c:51
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "namazu %s, a search program of Namazu.\n"
 "\n"
@@ -275,6 +275,7 @@ msgstr ""
 "    -d, --debug             デバッグモード\n"
 "    -v, --version           ヴァージョンを表\示する\n"
 "        --help              このヘルプを表\示する\n"
+"        --norc              設定ファイルを読み込まない\n"
 "        --                  オプションリストを終了する\n"
 "\n"
 "バグ報告は <%s> へどうぞ\n"
@@ -886,45 +887,45 @@ msgstr ""
 "                           例: -50 で 50 日以内、+50 で 50 日より古いものだけ\n"
 "\n"
 "形態素解析:\n"
-"  -b, --use-mecab         日本語の単語のわかち書きに MeCab を用いる\n"
-"  -c, --use-chasen        日本語の単語のわかち書きに ChaSen を用いる\n"
-"  -k, --use-kakasi        日本語の単語のわかち書きに KAKASI を用いる\n"
-"  -m, --use-chasen-noun   名詞のみを抽出する\n"
-"      --use-builtinwakati 日本語の単語のわかち書きに内蔵ルーチンを用いる\n"
+"  -b, --use-mecab          日本語の単語のわかち書きに MeCab を用いる\n"
+"  -c, --use-chasen         日本語の単語のわかち書きに ChaSen を用いる\n"
+"  -k, --use-kakasi         日本語の単語のわかち書きに KAKASI を用いる\n"
+"  -m, --use-chasen-noun    名詞のみを抽出する\n"
+"      --use-builtinwakati  日本語の単語のわかち書きに内蔵ルーチンを用いる\n"
 "  -L, --indexing-lang=LANG インデックス時に言語に特化した処理を行なう\n"
 "\n"
 "文字列処理:\n"
-"  -E, --no-edge-symbol  単語の両端の記号は削除する\n"
-"  -G, --no-okurigana    送り仮名を削除する\n"
-"  -H, --no-hiragana     平仮名のみの単語は登録しない\n"
-"  -K, --no-symbol       記号をすべて削除する\n"
-"      --decode-base64   添付されたBase64エンコード部分をデコードする\n"
+"  -E, --no-edge-symbol     単語の両端の記号は削除する\n"
+"  -G, --no-okurigana       送り仮名を削除する\n"
+"  -H, --no-hiragana        平仮名のみの単語は登録しない\n"
+"  -K, --no-symbol          記号をすべて削除する\n"
+"      --decode-base64      添付されたBase64エンコード部分をデコードする\n"
 "\n"
 "要約:\n"
-"  -U, --no-encode-uri       URIのencodeを行わない\n"
-"  -x, --no-heading-summary  HTML のヘディングによる要約作成を行わない\n"
+"  -U, --no-encode-uri      URIのencodeを行わない\n"
+"  -x, --no-heading-summary HTML のヘディングによる要約作成を行わない\n"
 "\n"
 "\n"
 "インデックス作成:\n"
-"      --update=INDEX        更新するインデックスを指定する\n"
-"  -z, --check-filesize      サイズが変わったファイルも対象とする\n"
-"  -Y, --no-delete           削除された文書の検出を行わない\n"
-"  -Z, --no-update           文書の更新・削除を反映しない\n"
+"      --update=INDEX       更新するインデックスを指定する\n"
+"  -z, --check-filesize     サイズが変わったファイルも対象とする\n"
+"  -Y, --no-delete          削除された文書の検出を行わない\n"
+"  -Z, --no-update          文書の更新・削除を反映しない\n"
 "\n"
 "その他:\n"
-"  -s, --checkpoint        チェックポイント機構\を作動させる\n"
-"  -C, --show-config       現在の設定を表\示する\n"
-"  -f, --config=FILE       設定ファイルを指定する\n"
-"  -I, --include=FILE      カスタマイズ用ファイルを読み込む\n"
-"  -O, --output-dir=DIR    インデックスの出力先を指定する\n"
-"  -T, --template-dir=DIR  NMZ.{head,foot,body}.* のディレクトリを指定する\n"
-"  -q, --quiet             インデックス処理の最中にメッセージを表\示しない\n"
-"  -v, --version           ヴァージョンを表\示する\n"
-"  -V, --verbose           口やかましいモード\n"
-"      --debug             デバッグモード\n"
-"      --help              このヘルプを表\示する\n"
-"      --norc              設定ファイルを読み込まない\n"
-"      --                  オプションリストを終了する\n"
+"  -s, --checkpoint         チェックポイント機構\を作動させる\n"
+"  -C, --show-config        現在の設定を表\示する\n"
+"  -f, --config=FILE        設定ファイルを指定する\n"
+"  -I, --include=FILE       カスタマイズ用ファイルを読み込む\n"
+"  -O, --output-dir=DIR     インデックスの出力先を指定する\n"
+"  -T, --template-dir=DIR   NMZ.{head,foot,body}.* のディレクトリを指定する\n"
+"  -q, --quiet              インデックス処理の最中にメッセージを表\示しない\n"
+"  -v, --version            ヴァージョンを表\示する\n"
+"  -V, --verbose            口やかましいモード\n"
+"      --debug              デバッグモード\n"
+"      --help               このヘルプを表\示する\n"
+"      --norc               設定ファイルを読み込まない\n"
+"      --                   オプションリストを終了する\n"
 "\n"
 "バグ報告は <%s> へどうぞ\n"
 
