--- a/po/es.po
+++ b/po/es.po
@@ -908,10 +908,12 @@ msgstr ""
 "que sean más antiguos de 50.\n"
 "\n"
 "Analisis Morfológico:\n"
+"  -b, --use-mecab          use MeCab para analizar japonés.\n"
 "  -c, --use-chasen         usa ChaSen para analizar japonés.\n"
 "  -k, --use-kakasi         usa KAKASI para analizar japonés.\n"
 "  -m, --use-chasen-noun    usa ChaSen para extraer sólo nombres.\n"
 "      --use-builtinwakati  use Built-in wakati for analyzing Japanese.\n"
+"  -L, --indexing-lang=LANG index with language specific processing.\n"
 "\n"
 "Operaciones de Texto:\n"
 "  -E, --no-edge-symbol     quita los símbolos en los bordes de las "
@@ -927,7 +929,7 @@ msgstr ""
 "\n"
 "Construcción del ƒwndice:\n"
 "      --update=INDEX       pon el INDEX para actualización.\n"
-"  -X, --check-filesize     detect file size changed.\n"
+"  -z, --check-filesize     detect file size changed.\n"
 "  -Y, --no-delete          no detectar documentos borrados.\n"
 "  -Z, --no-update          no detectar documentos actualizados ni borrados.\n"
 "\n"
