--- a/po/fr.po
+++ b/po/fr.po
@@ -912,8 +912,8 @@ msgstr ""
 "ancien que 50.\n"
 "\n"
 "Analyses morphologique :\n"
-"  -c, --use-chasen         utilisation de ChaSen pour l'analyse du "
-"Japonais.\n"
+"  -b, --use-mecab          utilisation de MeCab pour l'analyse du   -c, --"
+"use-chasen         utilisation de ChaSen pour l'analyse du Japonais.\n"
 "  -k, --use-kakasi         utilisation de KAKASI pour l'analyse du "
 "Japonais.\n"
 "  -m, --use-chasen-noun    utilisation de ChaSen uniquement pour "
@@ -935,7 +935,7 @@ msgstr ""
 "\n"
 "Construction Index :\n"
 "      --update=INDEX       positionne INDEX pour la mise à jour.\n"
-"  -X, --check-filesize     detect file size changed.\n"
+"  -z, --check-filesize     detect file size changed.\n"
 "  -Y, --no-delete          ne pas détecter les documents supprimés.\n"
 "  -Z, --no-update          ne pas détecter les documents mis à jour et "
 "supprimés.\n"
