*** empty log message ***

--- a/po/fr.po
+++ b/po/fr.po
@@ -912,8 +912,8 @@ msgstr ""
 "ancien que 50.\n"
 "\n"
 "Analyses morphologique :\n"
-"  -b, --use-mecab          utilisation de MeCab pour l'analyse du   -c, --"
-"use-chasen         utilisation de ChaSen pour l'analyse du Japonais.\n"
+"  -b, --use-mecab          utilisation de MeCab pour l'analyse du Japonais.\n"
+"  -c, --use-chasen         utilisation de ChaSen pour l'analyse du Japonais.\n"
 "  -k, --use-kakasi         utilisation de KAKASI pour l'analyse du "
 "Japonais.\n"
 "  -m, --use-chasen-noun    utilisation de ChaSen uniquement pour "
