--- a/po/fr.po
+++ b/po/fr.po
@@ -913,7 +913,8 @@ msgstr ""
 "\n"
 "Analyses morphologique :\n"
 "  -b, --use-mecab          utilisation de MeCab pour l'analyse du Japonais.\n"
-"  -c, --use-chasen         utilisation de ChaSen pour l'analyse du Japonais.\n"
+"  -c, --use-chasen         utilisation de ChaSen pour l'analyse du "
+"Japonais.\n"
 "  -k, --use-kakasi         utilisation de KAKASI pour l'analyse du "
 "Japonais.\n"
 "  -m, --use-chasen-noun    utilisation de ChaSen uniquement pour "
