* src/usage.c: Ditto. * po/{*.po, namazu.pot}: Ditto.

--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Namazu 2.0.6pre1\n"
 "Report-Msgid-Bugs-To: bugs@namazu.org\n"
-"POT-Creation-Date: 2006-01-20 01:20+0900\n"
+"POT-Creation-Date: 2006-01-24 18:12+0900\n"
 "PO-Revision-Date: 2001-06-26 16:55+0900\n"
 "Last-Translator: Jose Juan Zapater Vera <compi@arrakis.es>\n"
 "Language-Team: Spanish <es@li.org>\n"
@@ -238,7 +238,8 @@ msgid ""
 "        --norc           do not read the personal initialization files.\n"
 "        --               Terminate option list.\n"
 "\n"
-"Report bugs to <%s>.\n"
+"Report bugs to <%s>\n"
+"or <%s>.\n"
 msgstr ""
 "namazu %s, el programa de búsqueda de Namazu.\n"
 "\n"
@@ -277,13 +278,14 @@ msgstr ""
 "        --norc           do not read the personal initialization files.\n"
 "        --               Terminate option list.\n"
 "\n"
-"Reporta los errores a <%s>.\n"
+"Reporta los errores a <%s>\n"
+"or <%s>.\n"
 
-#: src/usage.c:92
+#: src/usage.c:93
 msgid "Usage: namazu [options] <query> [index]...\n"
 msgstr "Usa: namazu [opciones] <consulta> [índice]...\n"
 
-#: src/usage.c:93
+#: src/usage.c:94
 msgid "Try `namazu --help' for more information.\n"
 msgstr "Intenta `namazu --help para más información.\n"
 
@@ -870,7 +872,8 @@ msgid ""
 "      --norc               do not read the personal initialization files.\n"
 "      --                   Terminate option list.\n"
 "\n"
-"Report bugs to <%s>.\n"
+"Report bugs to <%s>\n"
+"or <%s>.\n"
 msgstr ""
 "mknmz %s, el indizador de Namazu.\n"
 "\n"
@@ -947,9 +950,10 @@ msgstr ""
 "      --norc               do not read the personal initialization files.\n"
 "      --                   Terminate option list.\n"
 "\n"
-"Reporta los errores a <%s>.\n"
+"Reporta los errores a <%s>\n"
+"or <%s>.\n"
 
-#: pl/var.pl.in:131
+#: pl/var.pl.in:132
 msgid "No title in original"
 msgstr "No hay título en el original"
 
