--- a/po/fr.po
+++ b/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Namazu 2.0.6pre1\n"
 "Report-Msgid-Bugs-To: bugs@namazu.org\n"
-"POT-Creation-Date: 2006-01-20 01:20+0900\n"
+"POT-Creation-Date: 2006-01-24 18:12+0900\n"
 "PO-Revision-Date: 2001-06-26 16:55+0900\n"
 "Last-Translator: Stephane Legrand <Stephane.Legrand@bigfoot.com>\n"
 "Language-Team: French <fr@li.org>\n"
@@ -246,7 +246,8 @@ msgid ""
 "        --norc           do not read the personal initialization files.\n"
 "        --               Terminate option list.\n"
 "\n"
-"Report bugs to <%s>.\n"
+"Report bugs to <%s>\n"
+"or <%s>.\n"
 msgstr ""
 "namazu %s, un programme de recherche de Namazu.\n"
 "\n"
@@ -289,13 +290,14 @@ msgstr ""
 "        --norc              do not read the personal initialization files.\n"
 "        --                  Terminate option list.\n"
 "\n"
-"Signalez les bugs à <%s>.\n"
+"Signalez les bugs à <%s>\n"
+"or <%s>.\n"
 
-#: src/usage.c:92
+#: src/usage.c:93
 msgid "Usage: namazu [options] <query> [index]...\n"
 msgstr "Usage : namazu [options] <requête> [index]...\n"
 
-#: src/usage.c:93
+#: src/usage.c:94
 msgid "Try `namazu --help' for more information.\n"
 msgstr "`namazu --help' pour plus d'informations.\n"
 
@@ -878,7 +880,8 @@ msgid ""
 "      --norc               do not read the personal initialization files.\n"
 "      --                   Terminate option list.\n"
 "\n"
-"Report bugs to <%s>.\n"
+"Report bugs to <%s>\n"
+"or <%s>.\n"
 msgstr ""
 "mknmz %s, programme de création d'index pour Namazu.\n"
 "\n"
@@ -958,9 +961,10 @@ msgstr ""
 "      --norc               do not read the personal initialization files.\n"
 "      --                   Terminate option list.\n"
 "\n"
-"Signalez les bugs à <%s>.\n"
+"Signalez les bugs à <%s>\n"
+"or <%s>.\n"
 
-#: pl/var.pl.in:131
+#: pl/var.pl.in:132
 msgid "No title in original"
 msgstr "Pas de titre dans l'original"
 
