--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Namazu 2.0.6pre1\n"
 "Report-Msgid-Bugs-To: bugs@namazu.org\n"
-"POT-Creation-Date: 2006-01-20 01:20+0900\n"
+"POT-Creation-Date: 2006-01-24 18:12+0900\n"
 "PO-Revision-Date: 2001-06-26 16:55+0900\n"
 "Last-Translator: Ryuji Abe <rug@namazu.org>\n"
 "Language-Team: Japanese <ja@li.org>\n"
@@ -246,7 +246,8 @@ msgid ""
 "        --norc           do not read the personal initialization files.\n"
 "        --               Terminate option list.\n"
 "\n"
-"Report bugs to <%s>.\n"
+"Report bugs to <%s>\n"
+"or <%s>.\n"
 msgstr ""
 "namazu %s, Namazu の検索プログラム\n"
 "\n"
@@ -278,13 +279,14 @@ msgstr ""
 "        --norc              設定ファイルを読み込まない\n"
 "        --                  オプションリストを終了する\n"
 "\n"
-"バグ報告は <%s> へどうぞ\n"
+"バグ報告は <%s>\n"
+"または <%s> へどうぞ\n"
 
-#: src/usage.c:92
+#: src/usage.c:93
 msgid "Usage: namazu [options] <query> [index]...\n"
 msgstr "使い方: namazu [オプション] <検索式> [インデックス]...\n"
 
-#: src/usage.c:93
+#: src/usage.c:94
 msgid "Try `namazu --help' for more information.\n"
 msgstr "`namazu --help' でより詳しい情報が表\示されます\n"
 
@@ -863,7 +865,8 @@ msgid ""
 "      --norc               do not read the personal initialization files.\n"
 "      --                   Terminate option list.\n"
 "\n"
-"Report bugs to <%s>.\n"
+"Report bugs to <%s>\n"
+"or <%s>.\n"
 msgstr ""
 "mknmz %s, Namazu のインデックス作成プログラム \n"
 "\n"
@@ -927,9 +930,10 @@ msgstr ""
 "      --norc               設定ファイルを読み込まない\n"
 "      --                   オプションリストを終了する\n"
 "\n"
-"バグ報告は <%s> へどうぞ\n"
+"バグ報告は <%s>\n"
+"または <%s> へどうぞ\n"
 
-#: pl/var.pl.in:131
+#: pl/var.pl.in:132
 msgid "No title in original"
 msgstr "題名なしの文書"
 
