* scripts/mknmz.in: Add TRAC_URI. * man/*: Ditto.

--- a/man/mknmz.1
+++ b/man/mknmz.1
@@ -145,7 +145,8 @@ do not read the personal initialization files.
 \fB\-\-\fR
 Terminate option list.
 .SH "REPORTING BUGS"
-Report bugs to <bug-namazu@namazu.org>.
+Report bugs to <http://www.namazu.org/trac-namazu/trac.cgi>
+or <bug-namazu@namazu.org>.
 .SH COPYRIGHT
 Copyright \(co 1997-1999 Satoru Takabayashi All rights reserved.
 .br
