--- a/NEWS
+++ b/NEWS
@@ -28,12 +28,13 @@ Overview of Changes in Namazu 2.0.14 - December 15, 2004
 Overview of Changes in Namazu 2.0.13 - April 14, 2004
 
 * Include File::MMagic 1.20.
-* Add -X and --check-filesize options for mknmz text-processing.
+* Add -z and --check-filesize options for mknmz text-processing.
 * Add Polish translations.
   (Contributed by Kryzystof Drewicz.)
 * Add German translations.
   (Contributed by Gerald Pfeifer.)
-* Add new filters (Ichitaro variants, OpenOffice.org, RTF, apachecache)
+* Add new filters
+  (Ichitaro variants, OpenOffice.org, RTF, apachecache)
 * Add new filter (Macbinary)
 * Adapt new filter programs (wvWare 0.7.4, xpdf 2.02 - 3.00)
 * Add new directives for namazurc (SUICIDE_TIME, REGEX_SEARCH)
